[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panhunt"
version = "2.0.0"
description = "Search directories and archives for documents containing payment card numbers (PANs)."
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
    { name = "Dionach Ltd" },
    { name = "Zafer Balkan" },
]
keywords = ["pci", "pan", "credit-card", "scanner", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]
dependencies = [
    "colorama>=0.4.6",
    "pdfminer.six>=20240706",
    "psutil>=7.0.0",
    "python-magic-bin>=0.4.14; platform_system == 'Windows'",
    "python-magic>=0.4.27; platform_system != 'Windows'",
    "typing-extensions>=4.0.0; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "mypy>=1.15.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "twine>=6.0.0",
]

[project.scripts]
panhunt = "panhunt:run"

[project.urls]
Homepage = "https://github.com/zbalkan/PANhunt"
Repository = "https://github.com/zbalkan/PANhunt"
Issues = "https://github.com/zbalkan/PANhunt/issues"
Changelog = "https://github.com/zbalkan/PANhunt/blob/master/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
panhunt = ["resources/*"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
omit = [
    "src/tests/*",
    "src/panhunt/__init__.py",
    "src/panhunt/formats/*",
    "src/panhunt/panutils.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]
